# FejerIdentityFilter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: benchmarks.yml  tests.yml
docs/: fourier_comparison.md
examples/: compare_with_fourier_filters.py  compare_zero_likelihood_filters.py
src/fejer_identity_filter/: __init__.py  distribution.py  fejer.py  filter.py
tests/: test_comparison_script.py  test_fejer_helpers.py  test_fejer_reduction.py  test_filter_integration.py  test_integration_minimal.py
