[tool.poetry]
name = "fejer-identity-filter"
version = "0.1.0"
description = "Fejer/Cesaro-reduced identity Fourier filter for hypertoroidal recursive Bayesian estimation."
readme = "README.md"
authors = ["Florian Pfaff"]
license = "MIT"
packages = [{ include = "fejer_identity_filter", from = "src" }]
include = ["src/fejer_identity_filter/py.typed"]
keywords = [
  "bayesian-filtering",
  "recursive-estimation",
  "fourier-series",
  "fejer-kernel",
  "directional-statistics",
  "hypertorus",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pyrecest = ">=2.4.1"
numpy = ">=2.0,<2.5"
scipy = ">=1.14,<1.18"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 180

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
